fix(tabPanel): Fix double borders around disabled tab

--- a/packages/devextreme/scss/widgets/generic/tabPanel/layout/tab/_base.scss
+++ b/packages/devextreme/scss/widgets/generic/tabPanel/layout/tab/_base.scss
@@ -16,10 +16,6 @@
 .dx-tabpanel-tab {
   padding: $generic-tabpanel-tabs-item-padding;
 
-  &.dx-tab::after {
-    z-index: 2;
-  }
-
   &.dx-state-disabled {
     &::after {
       z-index: 3;
